--- a/gallery.css
+++ b/gallery.css
@@ -11,7 +11,7 @@ height: 650px;
     border:5px solid black;
     margin:0 auto;
 background-color: #8e68ff;
-background-image: url('');
+background-image:none;
 background-repeat: no-repeat;
 color:#FFFFFF;
 text-align: center;
